--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "core-js": "^3.8.3",
     "marked": "^15.0.3",
+    "marked-highlight": "^2.2.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
@@ -24,6 +25,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "highlight.js": "^11.11.0",
     "vuex": "^4.1.0"
   },
   "eslintConfig": {
