refactor(components): 优化聊天组件并调整消息标题长度
-将新对话标题长度限制从50 个字符调整为20 个字符
-优化了发送消息和处理流数据的逻辑
- 添加了请求中断功能，以应对连接错误等情况- 调整了控制台日志输出，提高可读性

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve:dev": "vue-cli-service serve",
     "serve:testing": "vue-cli-service serve --mode testing",
     "serve:production": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
