feat(user): 实现用户登录和注册功能
- 新增 Login 和 Register 组件
- 添加用户登录和注册的路由
- 实现用户登录和注册的后端接口
- 添加全局路由守卫，保护需要身份验证的路由
- 优化项目结构，增加 views 文件夹用于存放页面级组件

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
+    "axios": "^1.8.1",
     "core-js": "^3.8.3",
     "marked": "^15.0.3",
     "marked-highlight": "^2.2.1",
