--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VUE_APP_API_URL=http://127.0.0.1:6002
-VUE_APP_BASE_URL=/aiApi
+VUE_APP_API_URL=https://api.example.com/ai
+VUE_APP_BASE_URL=/aiProxy
 VUE_APP_ENVIRONMENT=development
