--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "axios": "^1.8.1",
     "core-js": "^3.8.3",
     "marked": "^15.0.3",
     "marked-highlight": "^2.2.1",
+    "pinia": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
